<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tzPalette</string>
    
    <string name="title_capture_view">Capture</string>
    <string name="title_palette_list_view">My Palettes</string>
    <string name="title_about_view">About</string>
    <string name="title_palette_card_view">Palette Card</string>
    <string name="title_palette_edit_view">Edit Palette</string>
    <string name="title_palette_edit_view_rename">Change Title</string>
    <string name="title_settings_view">Settings</string>
    <string name="title_share_action">Share My Palette</string>
    <string name="title_edit_color">Edit Color</string>
    <string name="title_color_info">Color Info</string>
    <string name="title_exit_without_save">Palette Changes Unsaved</string>
    <string name="title_reanalyse_colors">Re-analyse Colors</string>
    
    <string name="message_exit_without_save">Do you really want to exit without saving the changes?</string>
    <string name="message_reanalyse_colors">It will remove all existing colors in this palette, continue?</string>
    
    <string name="capture_view_take_photo_1">Take a photo by</string>
    <string name="capture_view_take_photo_2">Camera</string>
    <string name="capture_view_pick_picture_1">Pick a picture from</string>
    <string name="capture_view_pick_picture_2">Gallery</string>
    
    <string name="action_takePhoto">Take photo</string>
    <string name="action_pickPicture">Pick picture</string>
    <string name="action_paletteList">My Palettes</string>
    <string name="action_share">Share</string>
    <string name="action_analysis">Analysis</string>
    <string name="action_save">Save</string>
    <string name="action_export">Export</string>
    <string name="action_clear">Clear</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_open">Open</string>
    <string name="action_view">View</string>
    <string name="action_edit">Edit</string>
    <string name="action_copy">Copy</string>
    <string name="action_exit">Exit</string>
    <string name="action_continue">Continue</string>
    <string name="action_saveAndExit">Save &amp; Exit</string>
    <string name="action_restore">Restore</string>
    <string name="action_addColor">Add color into palette</string>
    <string name="action_favourite">Mask as favourite</string>
    <string name="action_unfavourite">Remove favourite</string>
    <string name="action_emailPalette">Email palette</string>
    <string name="action_cancel">Cencel</string>
    <string name="action_clearAll">Clear All</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_contactUs">Contact Us</string>
    <string name="action_sortBy">Sort By</string>
    <string name="action_sortBy_title">Palette Name</string>
    <string name="action_sortBy_updated">Recently Updated</string>
    
    <string name="color_info_rgb_title">RGB</string>
    <string name="color_info_rgb_value">R = %1$d G = %2$d B = %3$d</string>
    <string name="color_info_hsv_title">HSV</string>
    <string name="color_info_hsv_value">H = %1$d° S = %2$d%% V = %3$d%%</string>
    <string name="color_info_hsl_title">HSL</string>
    <string name="color_info_hsl_value">H = %1$d° S = %2$d%% L = %3$d%%</string>
    <string name="color_info_lab_title">LAB</string>
    <string name="color_info_lab_value">L = %1$d a = %2$d b = %3$d</string>
    <string name="color_info_cmyk_title">CMYK</string>
    <string name="color_info_cmyk_value">C = %1$d%% M = %2$d%% Y = %3$d%% K = %4$d%%</string>
    
    <string name="color_info_hex_title">Hex</string>
    <string name="color_info_rgb_r_title">Red</string>
    <string name="color_info_rgb_g_title">Green</string>
    <string name="color_info_rgb_b_title">Blue</string>
    <string name="color_info_hsv_h_title">Hue</string>
    <string name="color_info_hsv_s_title">Saturation</string>
    <string name="color_info_hsv_v_title">Value</string>
    
    <string name="color_info_rgb_r_value">%1$d</string>
    <string name="color_info_rgb_g_value">%1$d</string>
    <string name="color_info_rgb_b_value">%1$d</string>
    <string name="color_info_hsv_h_value">%1$d°</string>
    <string name="color_info_hsv_s_value">%1$d%%</string>
    <string name="color_info_hsv_v_value">%1$d%%</string>
    
    <string name="color_edit_tab_rgb">RGB</string>
    <string name="color_edit_tab_hsv">HSV</string>
    <string name="color_bar_rgb_r_title">R = %1$d</string>
    <string name="color_bar_rgb_g_title">G = %1$d</string>
    <string name="color_bar_rgb_b_title">B = %1$d</string>
    <string name="color_bar_hsv_h_title">H = %1$d°</string>
    <string name="color_bar_hsv_s_title">S = %1$d%%</string>
    <string name="color_bar_hsv_v_title">V = %1$d%%</string>
    
    <string name="copy_color_into_clipboard">Color %1$s copied into clipboard.</string>
    
    <string name="palette_title_default">Untitled</string>
    <string name="palette_title_hint">Palette Name</string>
    
    <string name="palette_item_updated">Updated by %1$s</string>
    
    <string name="analysis_picture_in_process">Color analysis in process...</string>
    
    <string name="img_pic_desc">The picture displayed in capture view</string>
    <string name="img_pic_frame_desc">The picture frame in capture view</string>
    <string name="btn_clear_desc">The button used to clear the current palette</string>
    <string name="btn_save_desc">The bubbton used to save the current palette</string>
    <string name="btn_takePhoto_desc">The button used to take a photo</string>
    <string name="btn_loadPicture_desc">The button used to load a picture</string>
    <string name="btn_edit_desc">The button used to edit palette card</string>
    <string name="btn_share_desc">The button used to share palette card</string>
    <string name="btn_analysis_desc">The button used to analysis the picture</string>
    <string name="palette_thumb_desc">The palette item\'s thumbnail</string>
    <string name="palette_option_btn_desc">The palette item\'s edit options</string>
    
    <string name="pref_colorAnalysis_Title">Color Analysis Settings</string>
    
    <string name="pref_setColorNumber">Color number in analysis: %1$s</string>
    <string name="pref_setColorNumber_dialogTitle">Choose Number</string>
    <string name="pref_setColorNumber_summ">The total number of color picked up in color analysis.</string>
    
    <string name="pref_analysisAdvancedOptions">Advanced options</string>
    <string name="pref_analysisAdvancedOptions_summ">Advanced options for color analysis process.</string>
    
    <string name="pref_analysisColorType">Color type: %1$s</string>
    <string name="pref_analysisColorType_dialogTitle">Choose Color Type</string>
    <string name="pref_analysisColorType_summ">Change the color type in analysis. Different color type affects the analysis result.</string>
    <string name="pref_analysisColorType_rgb">RGB</string>
    <string name="pref_analysisColorType_hsv">HSV</string>
    <string name="pref_analysisColorType_hsl">HSL</string>
    <string name="pref_analysisColorType_lab">LAB</string>
    
    <string name="pref_analysisColorAccuracy">Analysis accuracy: %1$s</string>
    <string name="pref_analysisColorAccuracy_dialogTitle">Choose Accuracy</string>
    <string name="pref_analysisColorAccuracy_summ">Choose the color analysis accuracy. Higher accuracy takes more time to analysis.</string>
    <string name="pref_analysisColorAccuracy_high">High</string>
    <string name="pref_analysisColorAccuracy_normal">Normal</string>
    <string name="pref_analysisColorAccuracy_low">Low</string>
    
    <string name="pref_enableKpp">Enable KPP</string>
    <string name="pref_enableKpp_summ">Enable K-means++ process. It could improve the color analysis accuracy but slow down the process a little bit.</string>
    
    <string name="pref_cache_title">Cache Settings</string>
    
    <string name="pref_cache_thumbQuality">Thumb quality</string>
    <string name="pref_cache_thumbQuality_dialogTitle">Choose Thumb Quality</string>
    <string name="pref_cache_thumbQuality_high">High</string>
    <string name="pref_cache_thumbQuality_medium">Medium</string>
    <string name="pref_cache_thumbQuality_low">Low</string>
    
    <string name="pref_cache_clearAll">Clear all records</string>
    <string name="pref_cache_clearAll_summ">Delete all palette data saved in database. This operstion is unrecoverable.</string>
    <string name="pref_cache_clearAll_dialogTitle">Clear all records</string>
    <string name="pref_cache_clearAll_dialogContent">Are you sure you want to delete all records?</string>
    
    <string name="pref_system_title">System Settings</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_feedback_title">Feedback</string>
    
    <string name="about_version">ver %1$s</string>
    <string name="about_feedback"><u>Feedback</u></string>
    
    <string name="feedback_subject">[Feedback] %1$s ver %2$s</string>
    
    <string name="promotion">\n -created by %1$s ver %2$s</string>
    <string name="email_palette_card_subject">My Palette - %1$s</string>
    
</resources>
