<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/action_share"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider" />
    
    <!-- Re-pick colors. should always be in the overflow -->
    <item
        android:id="@+id/action_takePhoto"
        android:showAsAction="never"
        android:title="@string/action_takePhoto"/>
    
    <!-- Clear platte. should always be in the overflow -->
    <item
        android:id="@+id/action_loadPicture"
        android:showAsAction="never"
        android:title="@string/action_loadPicture"/>
    
    <!-- Re-pick colors. should always be in the overflow -->
    <item
        android:id="@+id/action_analysis"
        android:showAsAction="never"
        android:title="@string/action_analysis"/>
    
    <!-- Clear platte. should always be in the overflow -->
    <item
        android:id="@+id/action_clear"
        android:showAsAction="never"
        android:title="@string/action_clear"/>

    <!-- Save platte. should always be in the overflow -->
    <item
        android:id="@+id/action_save"
        android:showAsAction="never"
        android:title="@string/action_save"/>
    
    <!-- Settings. should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <!-- About. should always be in the overflow -->
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>