<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!--  Share palette card -->
    <item 
        android:id="@+id/action_share"
        android:showAsAction="ifRoom"
        android:title="@string/action_share" />
    
    <!--  Edit palette card. -->
    <item 
        android:id="@+id/action_edit"
        android:showAsAction="ifRoom"
        android:title="@string/action_edit" />
    
    <!-- Export palette. should always be in the overflow -->
    <item 
        android:id="@+id/action_export"
        android:showAsAction="never"
        android:title="@string/action_export" />
    
    <!-- Send palette via email. should always be in the overflow -->
    <item
        android:id="@+id/action_emailPalette"
        android:showAsAction="never"
        android:title="@string/action_emailPalette"/>
    
    <!-- Delete palette. should always be in the overflow -->
    <item
        android:id="@+id/action_delete"
        android:showAsAction="never"
        android:title="@string/action_delete"/>
    
</menu>
