<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item 
        android:id="@+id/action_save"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_save" />
    
    <item 
        android:id="@+id/action_cancel"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_cancel" />

    <!-- Re-pick colors. should always be in the overflow -->
    <item
        android:id="@+id/action_analysis"
        android:showAsAction="never"
        android:title="@string/action_analysis"/>
    
    <!-- Clear platte. should always be in the overflow -->
    <item
        android:id="@+id/action_clear"
        android:showAsAction="never"
        android:title="@string/action_clear"/>
    
</menu>
