<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- Sort By. -->
    <item 
        android:id="@+id/action_sortBy"
        android:showAsAction="ifRoom"
        android:title="@string/action_sortBy" />
    
    <!-- Clear All. should always be in the overflow -->
    <item 
        android:id="@+id/action_clearAll"
        android:showAsAction="never"
        android:title="@string/action_clearAll" />
    
    <!-- Settings. should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <!-- About. should always be in the overflow -->
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>
