<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/color_info_view_tab_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|left"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/color_info_view_rgb_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
    
        <TextView
            android:id="@+id/color_info_rgb_title"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:paddingLeft="20dp"
            android:text="@string/color_info_rgb_title"
            android:textAppearance="@style/ColorInfoTabTitleText" />
    
        <TextView
            android:id="@+id/color_info_rgb"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:gravity="center|left"
            android:text="@string/color_info_rgb_value"
            android:textSize="16sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/color_info_view_hsv_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
    
        <TextView
            android:id="@+id/color_info_hsv_title"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:paddingLeft="20dp"
            android:text="@string/color_info_hsv_title"
            android:textAppearance="@style/ColorInfoTabTitleText" />
    
        <TextView
            android:id="@+id/color_info_hsv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:gravity="center|left"
            android:text="@string/color_info_hsv_value"
            android:textSize="16sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/color_info_view_hsl_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
    
        <TextView
            android:id="@+id/color_info_hsl_title"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:paddingLeft="20dp"
            android:text="@string/color_info_hsl_title"
            android:textAppearance="@style/ColorInfoTabTitleText" />
    
        <TextView
            android:id="@+id/color_info_hsl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:gravity="center|left"
            android:text="@string/color_info_hsl_value"
            android:textSize="16sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/color_info_view_lab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
    
        <TextView
            android:id="@+id/color_info_lab_title"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:paddingLeft="20dp"
            android:text="@string/color_info_lab_title"
            android:textAppearance="@style/ColorInfoTabTitleText" />
    
        <TextView
            android:id="@+id/color_info_lab"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:gravity="center|left"
            android:text="@string/color_info_lab_value"
            android:textSize="16sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/color_info_view_cmyk_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
    
        <TextView
            android:id="@+id/color_info_cmyk_title"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:paddingLeft="20dp"
            android:text="@string/color_info_cmyk_title"
            android:textAppearance="@style/ColorInfoTabTitleText" />
    
        <TextView
            android:id="@+id/color_info_cmyk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:gravity="center|left"
            android:text="@string/color_info_cmyk_value"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>