<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- Search -->
    <item 
        android:id="@+id/action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/action_search"
        android:actionViewClass="android.widget.SearchView"/>
    
    <!-- Open my palettes view. should always be in the overflow -->
    <item
        android:id="@+id/action_paletteList"
        android:showAsAction="never"
        android:title="@string/action_paletteList"/>
    
    <!-- Settings. should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <!-- About. -->
    <item 
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about" />

</menu>
