<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/color_info_html_bar"
        android:layout_width="70dp"
        android:layout_height="40dp" >

        <ImageView
            android:id="@+id/color_info_color_bar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/color_lightgray"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/color_info_html"
            style="@style/ColorInfoColorBarText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/color_info_bar"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/color_info_html_bar"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/color_info_rgb_r"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/color_info_rgb_r_value"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/color_info_rgb_g"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/color_info_rgb_g_value"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/color_info_rgb_b"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/color_info_rgb_b_value"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/color_info_hsv_h"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/color_info_hsv_h_value"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/color_info_hsv_s"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.6"
            android:gravity="center"
            android:text="@string/color_info_hsv_s_value"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/color_info_hsv_v"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/color_info_hsv_v_value"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>