<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/color_edit_view_color_bar"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/color_lightgray" />

    <TextView
        android:id="@+id/color_info_html"
        style="@style/ColorInfoColorBarText"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/color_edit_view_color_bar"
        android:layout_alignTop="@+id/color_edit_view_color_bar"
        android:gravity="center"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/color_edit_view_color_type_bar"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/color_edit_view_color_bar"
        android:gravity="center|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/color_edit_tab_rgb"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:text="@string/color_edit_tab_rgb"
            android:textSize="18sp" />

        <!--
        <TextView
            android:id="@+id/color_info_hsl_title"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:text="@string/color_info_hsl_title"
            android:textSize="18sp"/>
        -->
        
        <ImageView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>
        
        <TextView
            android:id="@+id/action_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:text="@string/action_restore"
            android:textColor="@color/selector_clickable_text"
            android:textStyle="bold"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/color_edit_view_color_bar_area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/color_edit_view_color_type_bar"
        android:gravity="center|left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/color_bar_r_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:layout_margin="5dp"
            android:text="@string/color_bar_rgb_r_title"
            android:textStyle="bold"
            android:textSize="14sp" />

        <com.tzapps.tzpalette.ui.view.ColorBar
            android:id="@+id/color_bar_r"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:clickable="true" />

        <TextView
            android:id="@+id/color_bar_g_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:layout_margin="5dp"
            android:text="@string/color_bar_rgb_g_title"
            android:textStyle="bold"
            android:textSize="14sp" />

        <com.tzapps.tzpalette.ui.view.ColorBar
            android:id="@+id/color_bar_g"
            android:layout_width="fill_parent"
            android:layout_height="35dp" 
            android:clickable="true" />

        <TextView
            android:id="@+id/color_bar_b_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:layout_margin="5dp"
            android:text="@string/color_bar_rgb_b_title"
            android:textStyle="bold"
            android:textSize="14sp" />

        <com.tzapps.tzpalette.ui.view.ColorBar
            android:id="@+id/color_bar_b"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:clickable="true" />
    </LinearLayout>

</RelativeLayout>